fix: enlarge the hero image if too small

--- a/src/views/Hero/component.module.css
+++ b/src/views/Hero/component.module.css
@@ -42,6 +42,7 @@
 }
 
 .image {
+  width: 100%;
   object-fit: cover;
   background-color: var(--jahia-border);
   clip-path: polygon(
